[package]
name = "wad-rs"
version = "0.1.1"
edition = "2024"
authors = ["Mathias Lüer<m.lueer80@gmail.com>"]
description = "A Rust library for indexing WAD files and converting Lumps to more usable formats."

[workspace]
members = [
]

[workspace.dependencies]
rodio = "0.21.1"
rustysynth = "1.3.6"
criterion = "0.8.1"

[dependencies]
rodio.workspace = true
rustysynth.workspace = true
png = "0.18.0"

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "audio_demo"
path = "src/bin/audio_demo.rs"

[[bin]]
name = "palette_demo"
path = "src/bin/palette_demo.rs"

[[bin]]
name = "sprite_demo"
path = "src/bin/sprite_demo.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"
