[package]
name = "wad-rs"
version = "0.1.1"
edition = "2024"
authors = ["Mathias Lüer<m.lueer80@gmail.com>"]
description = "A Rust library for indexing WAD files and converting Lumps to more usable formats."

[workspace]
members = ["demos"]

[workspace.dependencies]
criterion = "0.8.1"
png = "0.18.0"
rodio = "0.21.1"
rustysynth = "1.3.6"

[dependencies]
rustysynth.workspace = true
once_cell = "1.21.3"

[dev-dependencies]
criterion.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"
